--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
   google_sign_in: ^6.1.4
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
